# httpcliientformfc

./: README.md
ZhouHttpClient/: CMakeLists.txt  ZhouHttpClient.sln  main.cpp
ZhouHttpClient/TestHttpClient/: Point.cpp  Point.h  TestHttpClient.aps  TestHttpClient.cpp  TestHttpClient.h  TestHttpClient.rc  TestHttpClient.vcxproj  TestHttpClient.vcxproj.filters  TestHttpClientDlg.cpp  TestHttpClientDlg.h  resource.h
ZhouHttpClient/TestHttpClient/data/: JsonCoversion.cpp  JsonCoversion.h
ZhouHttpClient/TestHttpClient/json/: json.h
ZhouHttpClient/TestHttpClient/res/: TestHttpClient.rc2
ZhouHttpClient/ZhouHttpClient/: CMakeLists.txt  HttpClientUtils.cpp  HttpClientUtils.h  Resource.h  ZhouHttpClient.cpp  ZhouHttpClient.def  ZhouHttpClient.h  ZhouHttpClient.rc  ZhouHttpClient.vcxproj  ZhouHttpClient.vcxproj.filters
ZhouHttpClient/ZhouHttpClient/data/: CMakeLists.txt  JsonCoversion.cpp  JsonCoversion.h
ZhouHttpClient/ZhouHttpClient/http/: CMakeLists.txt  DownloadFile.cpp  DownloadFile.h  FuncTool.cpp  FuncTool.h  HttpClient.cpp  HttpClient.h  UploadFiles.cpp  UploadFiles.h
ZhouHttpClient/ZhouHttpClient/json/: CMakeLists.txt  jsoncpp.cpp
ZhouHttpClient/ZhouHttpClient/res/: ZhouHttpClient.rc2
ZhouHttpClient/lib/: libcurl.lib
